Fix photo overflow in Post show

--- a/app/assets/stylesheets/api/post_show.scss
+++ b/app/assets/stylesheets/api/post_show.scss
@@ -10,6 +10,7 @@
     .post-show-img {
         min-width: 500px; 
         max-width: 700px;
+        max-height: 500px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -21,6 +22,7 @@
         img {
             max-width: 100%;
             max-height: 100%;
+            object-fit: cover;
         }
     }
 
